--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,24 +1,51 @@
 {% extends "blog/base.html" %}
 {% block content %}
-<div class="row">
+
   {% for i in post %}
+  
 
-
-
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <img src="http://placehold.it/350x150">
-        <div class="caption">
-          <h3>{{i.title}}</h3>
-          <h4>{{i.date}}</h4>
-          <p>{{i.description}}</p>
-          <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-        </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <img src="/media/{{i.photo}}" alt="...">
+      <div class="caption">
+        <h3><a href="/blog/{{i.slug }}"> {{i.title}}</a></h3>
+        <p>{{i.date}}</p>
+        
       </div>
     </div>
-
+  </div>
 
   {%endfor %}
 {% endblock %}
-     </div>
+<!-- sidebar
+
+	{% block sidebar %}
+        <div class="row">
+            <div class="jumborton">
+                 <h2>Recent Post</h2>
+            </div>
+    <div class="list-group">
+        {% for p in recent_post %}
+        <button type="button" class="list-group-item"><a href="/blog/{{p.slug }}"> {{p.title }}</a></button>
+              {% endfor %}
+    </div>
+</div>
+        <div class="row">
+             {% if categories %}
+            <h2>Categorie list</h2>
+            <div class="list-group">
+                 {% for category in categories %}
+                    <button type="button" class="list-group-item"><a href="/blog/category/{{category.slug }}"> {{ category.name }}</a></button>
+                    {% endfor %}
+
+            </div>
+
+        {% endif %}
+        </div>
+
+
+	{% endblock %}
+-->
+
+
 
